<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to Respect!</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="log_in_button_lbl">Log In</string>
    <string name="no_account_title">Don\'t have an account?</string>
    <string name="sign_up_title">Sign up now!</string>
    <string name="todo_string">TODO</string>

</resources>